# Veritum

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile_internal  README.md  config.h.in
example/: main.cpp
include/: Veritum.h  VeritumTypes.h  Window.h
src/: IWindow.h  Win32Window.cpp  Win32Window.h  Window.cpp  veritum.cpp
